@@ -16,6 +16,8 @@
 	to __errplot__ with return a vector of handles.
 	* plot/private/__errplot__.m: Allow for default linestyles.
 
+	* plot/private/__errplot__.m: Set the errorbar marker to "none".
+
 2010-04-26  David Bateman  <dbateman@free.fr>
 
 	* plot/bar.m: Document the use of the colormap for the color of
